<resources>
    <string name="app_name">Calculator App</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="dot">.</string>
    <string name="number_zero">0</string>
    <string name="operator_equal">=</string>
    <string name="operator_div">/</string>
    <string name="operator_mul">*</string>
    <string name="operator_sub">-</string>
    <string name="operator_add">+</string>
    <string name="all_clear">AC</string>
    <string name="negative_positive">+/-</string>
    <string name="percent">%</string>
    <string name="syntax_error">Syntax Error</string>
    <string name="action_save_result">Save Result</string>
    <string name="action_clean_result">Clean Result</string>
    <string name="msg_saved">Saved</string>
    <string name="msg_cleaned">Cleaned</string>
</resources>
